--- a/assets/style/scss/_main.scss
+++ b/assets/style/scss/_main.scss
@@ -4820,7 +4820,7 @@ $breadcrumb-divider: quote(">");
     }
 
     .content {
-      padding: 10% 0 30%;
+      padding: 10% 0 10%;
       min-height: auto;
       float: none;
 
